--- a/html/browsers/history/the-location-interface/security_location_0.sub.htm
+++ b/html/browsers/history/the-location-interface/security_location_0.sub.htm
@@ -11,13 +11,13 @@
   <body>
     <p>Access location object from different origins doesn't raise SECURITY_ERR exception</p>
     <div id=log></div>
-    <script type="text/javascript">
+    <script>
       var runTest = async_test("Accessing location object from different origins doesn't raise SECURITY_ERR exception").step_func_done(function() {
         var frame = document.getElementById('testframe');
         frame.setAttribute('onload', '');
-        frame.contentWindow.location = 'http://dev.w3.org/';
+        frame.contentWindow.location = 'http://{{domains[www1]}}:{{ports[http][0]}}/'
       });
     </script>
-    <iframe id='testframe' src="http://www.w3.org/" onload="runTest()">Test Frame</iframe>
+    <iframe id='testframe' src="http://{{domains[www]}}:{{ports[http][0]}}/" onload="runTest()">Test Frame</iframe>
   </body>
 </html>
