--- a/IndexedDB/idbcursor_advance_index.htm
+++ b/IndexedDB/idbcursor_advance_index.htm
@@ -1,70 +1,56 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title> IDBCursor.advance() - index - iterate cursor number of times specified by count </title>
-    <script src="/resources/testharness.js"></script>
-    <script src="/resources/testharnessreport.js"></script>
-    <script src="support.js"></script>
-    <script>
-        var objectStoreName = "objectstore";
-        var indexName = "index";
-        var records = [ { pKey: "primaryKey_0", iKey: "indexKey_0" },
-                        { pKey: "primaryKey_1", iKey: "indexKey_1" },
-                        { pKey: "primaryKey_2", iKey: "indexKey_2" },
-                        { pKey: "primaryKey_3", iKey: "indexKey_3" }];
-        var count = 0;
-        var db = null;
-        var t = async_test();
+<title>IDBCursor.advance() - index - iterate cursor number of times specified by count </title>
+<script src=/resources/testharness.js></script>
+<script src=/resources/testharnessreport.js></script>
+<script src=support.js></script>
 
-        function RunTest() {
-            var rqOpen = window.indexedDB.open(databaseName, databaseVersion);
-            rqOpen.onupgradeneeded = t.step_func( function(event) {
-                db = event.target.result;
-                db.onerror = function(e) { alert("dberror", e); }
-                var objStore = db.createObjectStore(objectStoreName, {keyPath:"pKey"});
-                objStore.createIndex(indexName, "iKey");
-                for(var i = 0; i < records.length; i++) {
-                    objStore.add(records[i]);
-                }
-            });
-            rqOpen.onsuccess = t.step_func(VerifyCursorIterates);
-            rqOpen.onerror = function(e) { alert("rqopen error", e); }
+<script>
+    var db,
+      count = 0,
+      t = async_test(),
+      records = [ { pKey: "primaryKey_0", iKey: "indexKey_0" },
+                  { pKey: "primaryKey_1", iKey: "indexKey_1" },
+                  { pKey: "primaryKey_2", iKey: "indexKey_2" },
+                  { pKey: "primaryKey_3", iKey: "indexKey_3" }];
+
+    var open_rq = createdb(t);
+    open_rq.onupgradeneeded = function(e) {
+        db = event.target.result;
+        var store = db.createObjectStore("test", {keyPath:"pKey"});
+        store.createIndex("idx", "iKey");
+
+        for(var i = 0; i < records.length; i++) {
+            store.add(records[i]);
         }
+    };
 
-        function VerifyCursorIterates() {
-            var txn = db.transaction(objectStoreName, "readonly");
-            var objStore = txn.objectStore(objectStoreName);
-            var index = objStore.index(indexName);
-            var rqCursor = index.openCursor();
-            rqCursor.onsuccess = t.step_func( function(event) {
-                var cursor = event.target.result;
-                if(cursor) {
-                    switch(count) {
-                        case 0:
-                            count += 3;
-                            cursor.advance(3);
-                            break;
-                        case 3:
-                            var record = cursor.value;
-                            assert_equals(record.pKey, records[count].pKey, "record.pKey");
-                            assert_equals(record.iKey, records[count].iKey, "record.iKey");
-                            t.done();
-                            break;
-                        default:
-                            assert_unreached("unexpected count");
-                            break;
-                    }
-                }
-            });
-        }
+    open_rq.onsuccess = function (e) {
+        var cursor_rq = db.transaction("test")
+                          .objectStore("test")
+                          .index("idx")
+                          .openCursor();
 
-        setup(function() {
-            var rqDelete = window.indexedDB.deleteDatabase(databaseName);
-            rqDelete.onsuccess = t.step_func( RunTest );
+        cursor_rq.onsuccess = t.step_func(function(e) {
+            var cursor = e.target.result;
+            assert_true(cursor instanceof IDBCursor);
+
+            switch(count) {
+                case 0:
+                    count += 3;
+                    cursor.advance(3);
+                    break;
+                case 3:
+                    var record = cursor.value;
+                    assert_equals(record.pKey, records[count].pKey, "record.pKey");
+                    assert_equals(record.iKey, records[count].iKey, "record.iKey");
+                    t.done();
+                    break;
+                default:
+                    assert_unreached("unexpected count");
+                    break;
+            }
         });
-    </script>
-</head>
-<body>
-    <div id="log"></div>
-</body>
-</html>
+    }
+</script>
+
+<div id=log></div>
