--- a/IndexedDB/idbcursor_continue_objectstore.htm
+++ b/IndexedDB/idbcursor_continue_objectstore.htm
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <title>IDBCursor.continue() - object store - iterate to the next record</title>
-<script src="/resources/testharness.js"></script>
-<script src="/resources/testharnessreport.js"></script>
-<script src="support.js"></script>
+<script src=/resources/testharness.js></script>
+<script src=/resources/testharnessreport.js></script>
+<script src=support.js></script>
 
 <script>
     var db,
@@ -14,7 +14,6 @@
     var open_rq = createdb(t);
     open_rq.onupgradeneeded = function(e) {
         db = e.target.result;
-        //var objStore = db.createObjectStore("test", {keyPath:"pKey"});
         var objStore = db.createObjectStore("test", {autoIncrement:true, keyPath:"pKey"});
 
         for (var i = 0; i < records.length; i++)
@@ -43,4 +42,4 @@
     };
 </script>
 
-<div id="log"> </div>
+<div id=log> </div>
