--- a/IndexedDB/idbfactory_open2.htm
+++ b/IndexedDB/idbfactory_open2.htm
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>IDBFactory.open() - database 'name' and 'version' are correctly set</title>
-    <script src="/resources/testharness.js"></script>
-    <script src="/resources/testharnessreport.js"></script>
-    <script src="support.js"></script>
-    <script>
-        var db = null;
-        var t = async_test();
-        var databaseName = "mydatabase2"
+<title>IDBFactory.open() - database 'name' and 'version' are correctly set</title>
+<script src=/resources/testharness.js></script>
+<script src=/resources/testharnessreport.js></script>
+<script src=support.js></script>
 
-        function RunTest() {
-            databaseVersion = parseInt(Math.random()*1000) + 1;
-            var rqOpen = window.indexedDB.open(databaseName, databaseVersion);
-            rqOpen.onsuccess = t.step_func( function(event) {
-                db = event.target.result;
-                assert_equals(db.name, databaseName, "db.name");
-                assert_equals(db.version, databaseVersion, "db.version")
-                t.done();
-            });
-            rqOpen.onerror = t.step_func( assert_open_request_error );
-        }
+<script>
+    var open_rq = createdb(async_test(), 'database_name', 13);
 
-        add_completion_callback(function() { if(db) db.close(); });
+    open_rq.onupgradeneeded = function(e) {};
+    open_rq.onsuccess = function(e) {
+        var db = e.target.result;
+        assert_equals(db.name, 'database_name', 'db.name');
+        assert_equals(db.version, 13, 'db.version');
+        this.done();
+    }
+</script>
 
-        setup(function() {
-            var rqDelete = window.indexedDB.deleteDatabase(databaseName);
-            rqDelete.onsuccess = t.step_func( RunTest );
-        });
-    </script>
-</head>
-<body>
-    <div id="log">
-    </div>
-</body>
-</html>
+<div id=log></div>
