Add interact flag

--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-001.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-001.html
@@ -6,7 +6,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property" />
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#api" />
-		<meta name="flags" content="dom">
+		<meta name="flags" content="dom interact">
 		<meta name="assert" content="This test checks that calling the requestFullscreen() method
 				on a video element that's part of a named flow properly displays the video in
 				full screen">
