--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-006.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-006.html
@@ -7,7 +7,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property" />
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#api" />
-		<meta name="flags" content="dom ahem">
+		<meta name="flags" content="dom ahem interact">
 		<meta name="assert" content="This test checks that calling the requestFullscreen() method
 				on an element whose descendants are part of a named flow will not show the
 				descendants flowed in the region.">
