--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-007.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-007.html
@@ -6,7 +6,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property" />
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#api" />
-		<meta name="flags" content="ahem dom">
+		<meta name="flags" content="ahem dom interact">
 		<meta name="assert" content="This test checks that calling the requestFullscreen() method
 				on a fixed-size region displays the region and the content flowed in it without
 				resizing the region or reflowing the content.">
