--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-009.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-009.html
@@ -7,7 +7,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#api" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#:fullscreen-pseudo-class" />
-		<meta name="flags" content="ahem dom">
+		<meta name="flags" content="ahem dom interact">
 		<meta name="assert" content="This test checks that using the :full-screen pseudo class to
 				make a region auto-sized works after calling the requestFullscreen() method
 				on a fixed size region.">
