--- a/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-010.html
+++ b/contributors/adobe/submitted/regions/interactivity/full-screen/fullscreen-region-content-010.html
@@ -7,7 +7,7 @@
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property" />
 		<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property" />
 		<link rel="help" href="http://www.w3.org/TR/fullscreen/#api" />
-		<meta name="flags" content="ahem">
+		<meta name="flags" content="ahem interact">
 		<meta name="assert" content="This test checks that calling the requestFullscreen() method
 				on a region that is part of a multiple-regions region chain does not change the order
 				in which content is flowed through the region chain.">
