--- a/touch-events/multi-touch-interactions-manual.html
+++ b/touch-events/multi-touch-interactions-manual.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>
 <html>
-<!-- 
+<!--
 	Test cases for Touch Events v1 Candiate Recommendation
 	http://www.w3.org/TR/2011/CR-touch-events-20111215/
 
-	These tests are based on Mozilla-Nokia-Google's single-touch tests and to some extent Olli Pettay's multi-touch tests. 
+	These tests are based on Mozilla-Nokia-Google's single-touch
+	tests and to some extent Olli Pettay's multi-touch tests.
 	http://w3c-test.org/webevents/tests/touch-events-v1/submissions/Moz-Nok-Goog/single-touch.html
 	http://w3c-test.org/webevents/tests/touch-events-v1/submissions/Mozilla/multi-touch.html
 
-	The primary purpose of the tests in this document is checking that the interactions of various Touch events are correctly implemented under any touch patterns
+	The primary purpose of the tests in this document is checking that the interactions
+	of various Touch events are correctly implemented under any touch patterns.
 
 	This document references Test Assertions (abbrev TA below) written by Cathy Chan
 	http://www.w3.org/2010/webevents/wiki/TestAssertions
@@ -18,6 +20,7 @@
 <title>Touch Events Multi-Touch Interaction Test</title>
 <meta name="viewport" content="width=device-width">
 <script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
 <script src="multi-touch-interactions.js"></script>
 <style>
 	div {
