--- a/html/semantics/interactive-elements/the-dialog-element/dialog-close.html
+++ b/html/semantics/interactive-elements/the-dialog-element/dialog-close.html
@@ -18,19 +18,22 @@
   <p>foobar</p>
   <button>OK</button>
 </dialog>
+<dialog id="d4" open>
+  <p>foobar</p>
+  <button>OK</button>
+</dialog>
+<dialog id="d5" open>
+  <p>foobar</p>
+  <button>OK</button>
+</dialog>
 <script>
   var d1 = document.getElementById('d1'),
       d2 = document.getElementById('d2'),
       d3 = document.getElementById('d3'),
+      d4 = document.getElementById('d4'),
+      d5 = document.getElementById('d5'),
       t = async_test("close() fires a close event"),
       was_queued = false;
-
-  d2.onclose = t.step_func_done(function(e) {
-    assert_true(was_queued, "close event should be queued");
-    assert_true(e.isTrusted, "close event is trusted");
-    assert_false(e.bubbles, "close event doesn't bubble");
-    assert_false(e.cancelable, "close event is not cancelable");
-  });
 
   test(function(){
     assert_throws("INVALID_STATE_ERR", function() {
@@ -42,7 +45,6 @@
     assert_true(d2.open);
     assert_equals(d2.returnValue, "");
     d2.close("closedialog");
-    was_queued = true;
     assert_false(d2.hasAttribute("open"));
     assert_equals(d2.returnValue, "closedialog");
   }, "close() removes the open attribute and set the returnValue to the first argument");
@@ -54,4 +56,19 @@
     assert_false(d3.hasAttribute("open"));
     assert_equals(d3.returnValue, "");
   }, "close() without argument removes the open attribute and there's no returnValue");
+
+  d4.onclose = t.step_func_done(function(e) {
+    assert_true(was_queued, "close event should be queued");
+    assert_true(e.isTrusted, "close event is trusted");
+    assert_false(e.bubbles, "close event doesn't bubble");
+    assert_false(e.cancelable, "close event is not cancelable");
+  });
+  d4.close();
+  was_queued = true;
+
+  test(function(){
+    Object.defineProperty(HTMLDialogElement.prototype, 'returnValue', { set: function(v) { assert_unreached('JS-defined setter returnValue on the prototype was invoked'); }, configurable:true });
+    Object.defineProperty(d5, 'returnValue', { set: function(v) { assert_unreached('JS-defined setter returnValue on the instance was invoked'); }, configurable:true });
+     d5.close('foo');
+  }, "close() should set the returnValue IDL attribute but not the JS property");
 </script>
