--- a/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html
+++ b/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html
@@ -6,6 +6,7 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
+<button id="b0">OK</button>
 <dialog id="d1">
   <p>foobar</p>
   <button id="b1">OK</button>
@@ -46,14 +47,18 @@
       d6 = document.getElementById('d6'),
       d7 = document.getElementById('d7'),
       d8 = document.getElementById('d8'),
-      b1 = document.getElementById('b1');
+      b0 = document.getElementById('b0'),
+      b3 = document.getElementById('b3'),
+      b4 = document.getElementById('b4'),
+      b5 = document.getElementById('b5');
 
   test(function(){
     assert_false(d1.open);
-    assert_true(b1.commandDisabled);
+    assert_false(b0.commandDisabled);
     d1.showModal();
+    this.add_cleanup(function() { d1.close(); });
     assert_true(d1.open);
-    assert_false(b1.commandDisabled);
+    assert_true(b0.commandDisabled);
     assert_equals(d1, document.elementFromPoint(window.innerWidth/2, window.innerHeight/2));
     assert_equals(document.activeElement, d1.firstChild);
   });
@@ -61,6 +66,7 @@
   test(function(){
     assert_throws("INVALID_STATE_ERR", function() {
       d2.showModal();
+      this.add_cleanup(function() { d2.close(); });
     });
   }, "showModal() on a <dialog> that already has an open attribute throws an InvalidStateError exception");
 
@@ -68,19 +74,23 @@
     var d = document.createElement("dialog");
     assert_throws("INVALID_STATE_ERR", function() {
       d.showModal();
+      this.add_cleanup(function() { d.close(); });
     });
   }, "showModal() on a <dialog> not in a Document throws an InvalidStateError exception");
 
   test(function(){
     assert_false(d3.open);
-    assert_true(b3.commandDisabled);
+    assert_false(b3.commandDisabled);
     assert_false(d4.open);
-    assert_true(b4.commandDisabled);
+    assert_false(b4.commandDisabled);
     assert_false(d5.open);
-    assert_true(b5.commandDisabled);
+    assert_false(b5.commandDisabled);
     d3.showModal();
+    this.add_cleanup(function() { d3.close(); });
     d4.showModal();
+    this.add_cleanup(function() { d4.close(); });
     d5.showModal();
+    this.add_cleanup(function() { d5.close(); });
     assert_true(d3.open);
     assert_true(b3.commandDisabled);
     assert_true(d4.open);
@@ -92,6 +102,7 @@
   test(function(){
     assert_false(d6.open);
     d6.showModal();
+    this.add_cleanup(function() { d6.close(); });
     assert_true(d6.open);
     assert_equals(document.activeElement, d6);
   }, "opening dialog without focusable children");
@@ -99,6 +110,7 @@
   test(function(){
     assert_false(d7.open);
     d7.showModal();
+    this.add_cleanup(function() { d7.close(); });
     assert_true(d7.open);
     assert_equals(document.activeElement, d7.firstChild);
   }, "opening dialog with multiple focusable children");
@@ -106,6 +118,7 @@
   test(function(){
     assert_false(d8.open);
     d8.showModal();
+    this.add_cleanup(function() { d8.close(); });
     assert_true(d8.open);
     assert_equals(document.activeElement, document.getElementById("i82"));
   }, "opening dialog with multiple focusable children, one having the autofocus attribute");
