--- a/html/semantics/selectors/pseudo-classes/dir01.html
+++ b/html/semantics/selectors/pseudo-classes/dir01.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <meta charset=iso-8859-8 id=meta>
-<title id=title>Selector: pseudo-classes (:dir(ltr), dir(rtl))</title>
+<title id=title>Selector: pseudo-classes (:dir(ltr), :dir(rtl)) in iso-8859-8 documents</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org" id=link1>
 <link rel=help href="http://www.w3.org/html/wg/drafts/html/master/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js" id=script1></script>
 <script src="/resources/testharnessreport.js" id=script2></script>
 <script src="utils.js" id=script3></script>
 <div id="log"></div>
-<p>This text is left to right<div id=div1 style="direction:rtl">this is right to left</div></p>
-<p>This text is left to right<span id=div2 style="direction:rtl">this is left to right</span></p>
+<div>This text is left to right<div id=div1 style="direction:rtl">this is right to left</div></div>
+<div>This text is left to right<span id=div2 style="direction:rtl">this is left to right</span></div>
 
 <script>
-  testSelector(":dir(rtl)", ["div1"], "character encoding iso-8859-8 makes a div direction overrides the unicode direction");
+  var ltr = new Array(),
+      all = document.querySelectorAll('*');
+  for(var i = all.length; i--; ltr.unshift(all[i]));
+  testSelector(":dir(ltr)", ltr, "direction doesn't affect :dir()");
 </script>
