--- a/html/dom/dynamic-markup-insertion/opening-the-input-stream/015-1.html
+++ b/html/dom/dynamic-markup-insertion/opening-the-input-stream/015-1.html
@@ -1,7 +1,7 @@
 <script>
 onload = function() {
   window.test_prop = 1;
-  parent.assert_equals(test_prop, 1);
+  parent.tests[0].step(function() {parent.assert_equals(test_prop, 1)});
   document.open();
   document.write("<script>test_prop = 2;<\/script>");
   document.close();
