missing ':' in title for dir selector

--- a/html/semantics/selectors/pseudo-classes/dir.html
+++ b/html/semantics/selectors/pseudo-classes/dir.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset=utf-8 id=meta>
-<title id=title>Selector: pseudo-classes (:dir(ltr), dir(rtl))</title>
+<title id=title>Selector: pseudo-classes (:dir(ltr), :dir(rtl))</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org" id=link1>
 <link rel=help href="http://www.w3.org/html/wg/drafts/html/master/#pseudo-classes" id=link2>
 <script src="/resources/testharness.js" id=script1></script>
