--- a/workers/interfaces/WorkerGlobalScope/close/setTimeout.html
+++ b/workers/interfaces/WorkerGlobalScope/close/setTimeout.html
@@ -14,6 +14,8 @@ setTimeout(x, 0);
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
 <script>
+setup({allow_uncaught_exception: true});
+
 async_test(function() {
   var gotMessage = false;
   var gotError = false;
