Make marquee test run much faster

--- a/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-events.html
+++ b/html/obsolete/requirements-for-implementations/the-marquee-element-0/marquee-events.html
@@ -6,8 +6,8 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
-<marquee id="test1" loop="2" width="100" behavior="alternate">Test1</marquee>
-<marquee id="test2" loop="2" width="100">Test2</marquee>
+<marquee id="test1" loop="2" width="1" behavior="alternate">&nbsp;</marquee>
+<marquee id="test2" loop="2" width="1">&nbsp;</marquee>
 <script>
   var mq;
   var t_start = async_test("marquee_events_start");
