fix var visibility

--- a/html/semantics/forms/the-input-element/password.html
+++ b/html/semantics/forms/the-input-element/password.html
@@ -10,7 +10,7 @@
 <input id="password_with_value" type="password" value="foobar" />
 <script type="text/javascript">
     setup(function() {
-      var password = document.getElementById("password");
+      window.password = document.getElementById("password");
     });
 
     test(function() {
