--- a/IndexedDB/idbdatabase_createObjectStore10-1000ends.htm
+++ b/IndexedDB/idbdatabase_createObjectStore10-1000ends.htm
@@ -3,7 +3,7 @@
 <meta name=timeout content=long>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
-<script src="../support.js"></script>
+<script src="support.js"></script>
 
 <script>
 var db,
@@ -17,8 +17,6 @@ open_rq.onupgradeneeded = function(e) {
     {
         st = db.createObjectStore("object_store_" + i)
         st.add("test", 1);
-        if (i%100 == 0)
-            console.log(i);
     }
 
     st.get(1).onsuccess = t.step_func(function(e) {
