--- a/runner/index.html
+++ b/runner/index.html
@@ -75,12 +75,28 @@
             <input value="/" id='path' class='path form-control' disabled>
           </div>
         </div>
+
+        <div class="form-group">
+          <label for="path" class="col-sm-3 control-label">Timeout Multiplier</label>
+          <div class="col-sm-9">
+            <input type=number value="1" id='timeout_multiplier' class='timeout_multiplier form-control'>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="render" class="col-sm-3 control-label">Show output (debug)</label>
+          <div class="col-sm-9">
+            <input type=checkbox id='render' value='render' class='render'>
+          </div>
+        </div>
+
         <div class="form-group">
           <label for="dumpit" class="col-sm-3 control-label">Dump JSON (debug)</label>
           <div class="col-sm-9">
             <input type=checkbox id='dumpit'>
           </div>
         </div>
+
         <div class="form-group" style='padding-top: 20px'>
           <div class="col-sm-offset-3 col-sm-9">
             <button type="button" class="btn btn-success toggleStart" disabled>Start</button>
