--- a/runner/index.html
+++ b/runner/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="form-group">
-          <label for="path" class="col-sm-3 control-label">Timeout Multiplier</label>
+          <label for="timeout_multiplier" class="col-sm-3 control-label">Timeout Multiplier</label>
           <div class="col-sm-9">
             <input type=number value="1" id='timeout_multiplier' class='timeout_multiplier form-control'>
           </div>
