--- a/IndexedDB/idbdatabase_close.htm
+++ b/IndexedDB/idbdatabase_close.htm
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>IDBDatabase.close() - unblock the version change transaction created by an open database request</title>
-    <script type="text/javascript" src="support.js"></script>
-    <script src="/resources/testharness.js"></script>
-    <script src="/resources/testharnessreport.js"></script>
-    <script type="text/javascript">
-        var db = null;
-        var bBlockEventFired = false;
-        var bUpgradeNeededEventFired = false;
-        var t = async_test();
+<title>IDBDatabase.close() - unblock the version change transaction created by an open database request</title>
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<script src="support.js"></script>
 
-        function RunTest() {
-            var rqOpen = window.indexedDB.open(databaseName, databaseVersion);
-            rqOpen.onsuccess = t.step_func( function(event) {
-                db = event.target.result;
-                var rqOpen2 = window.indexedDB.open(databaseName, databaseVersion + 1);
-                rqOpen2.onblocked = t.step_func( function (event) {
-                    bBlockEventFired = true;
-                    db.close();
-                });
-                rqOpen2.onerror = t.step_func( assert_database_error );;
-                rqOpen2.onsuccess = t.step_func( function (event) {
-                    assert_true(bBlockEventFired && bUpgradeNeededEventFired, "version change transaction is not unblocked when existing database connection is closed")
-                    t.done();
-                    return;
-                });
-                rqOpen2.onupgradeneeded = t.step_func( function (event) {
-                    bUpgradeNeededEventFired = true;
-                });
-            });
-        }
+<script>
+var db;
+var versionchange_fired;
+var blocked_fired;
+var upgradeneeded_fired;
+var t = async_test();
+var open_rq = createdb(t);
+var counter = 0;
 
-        add_completion_callback(function() { if(db) db.close(); });
+open_rq.onupgradeneeded = function() {}
+open_rq.onsuccess = function(e) {
+    db = e.target.result;
+    db.onversionchange = t.step_func(function(e) {
+        versionchange_fired = counter++;
+    });
+    var rq = window.indexedDB.open(db.name, db.version + 1);
+    rq.onblocked = t.step_func(function (e) {
+        blocked_fired = counter++;
+        db.close();
+    });
+    rq.onupgradeneeded = t.step_func(function (e) {
+        upgradeneeded_fired = counter++;
+    });
+    rq.onsuccess = t.step_func(function (e) {
+        assert_equals(versionchange_fired, 0, 'block event fired #')
+        assert_equals(blocked_fired, 1, 'block event fired #')
+        assert_equals(upgradeneeded_fired, 2, 'second upgradeneeded event fired #')
 
-        setup(function() {
-            var rqDelete = window.indexedDB.deleteDatabase(databaseName);
-            rqDelete.onsuccess = t.step_func( RunTest );
-        });
-    </script>
-</head>
-<body>
-    <div id="log"></div>
-</body>
-</html>
+        t.done();
+    });
+    rq.onerror = fail(t, 'Unexpected database deletion error');
+};
+
+</script>
+
+<div id="log"></div>
