replacing some new .php helper files with .py ones

--- a/XMLHttpRequest/send-entity-body-document.htm
+++ b/XMLHttpRequest/send-entity-body-document.htm
@@ -44,9 +44,9 @@
              with a U+FFFD replacement character for the invalid char
           * one HTML document parsed from a valid Shift-JIS source
      -->
-    <iframe src='resources/win-1252-xml.php' onload="init(this, 0)"></iframe>
-    <iframe src='resources/invalid-utf8-html.php' onload="init(this, 1)"></iframe>
-    <iframe src='resources/shift-jis-html.php' onload="init(this, 2)"></iframe>
+    <iframe src='resources/win-1252-xml.py' onload="init(this, 0)"></iframe>
+    <iframe src='resources/invalid-utf8-html.py' onload="init(this, 1)"></iframe>
+    <iframe src='resources/shift-jis-html.py' onload="init(this, 2)"></iframe>
     <iframe src='folder.txt' onload="init(this, 3)"></iframe>
     <iframe src='resources/image.gif' onload="init(this, 4)"></iframe>
   </body>
