--- a/dom/nodes/attributes.html
+++ b/dom/nodes/attributes.html
@@ -257,12 +257,12 @@ test(function() {
   assert_equals(el.hasAttribute("attr"), true)
   assert_equals(el.hasAttributeNS("ab", "attr"), true)
   assert_equals(el.hasAttributeNS("kl", "attr"), true)
-  assert_equals(el.getAttribute("attr"), "t2")
+  assert_equals(el.getAttribute("attr"), "t1")
   assert_equals(el.getAttributeNS("ab", "attr"), "t1")
   assert_equals(el.getAttributeNS("kl", "attr"), "t2")
   assert_equals(el.getAttributeNS(null, "attr"), null)
   assert_equals(el.getAttributeNS("", "attr"), null)
-}, "First set attribute is returned by setAttribute")
+}, "First set attribute is returned by getAttribute")
 test(function() {
   var el = document.createElement("div")
   el.setAttribute("style", "color:#fff;")
