fixup! This is the test suite for the Touch Events spec <http://www.w3.org/TR/touch-events>.

--- a/touch-events/create-touch-touchlist.html
+++ b/touch-events/create-touch-touchlist.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <!--
-    Test cases for Touch Events v1 Candiate Recommendation
-    http://www.w3.org/TR/2011/CR-touch-events-20111215/
+    Test cases for Touch Events v1 Recommendation
+    http://www.w3.org/TR/touch-events/
 
 	These tests are based on Mozilla-Nokia-Google's single-touch tests.
 	http://w3c-test.org/webevents/tests/touch-events-v1/submissions/Moz-Nok-Goog/single-touch.html
