--- a/touch-events/multi-touch-interfaces-manual.html
+++ b/touch-events/multi-touch-interfaces-manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <!--
-     Test cases for Touch Events v1 Candiate Recommendation
-     http://www.w3.org/TR/2011/CR-touch-events-20111215/
+     Test cases for Touch Events v1 Recommendation
+     http://www.w3.org/TR/touch-events/
 
      These tests are based on Mozilla-Nokia-Google's single-touch
      tests and to some extent Olli Pettay's multi-touch tests.
