--- a/touch-events/single-touch-manual.html
+++ b/touch-events/single-touch-manual.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <!--
-     Test cases for Touch Events v1 Candiate Recommendation
-     http://www.w3.org/TR/2011/CR-touch-events-20111215/
+     Test cases for Touch Events v1 Recommendation
+     http://www.w3.org/TR/touch-events/
 
      These tests are based on Matt Bruebeck's single-touch tests.
      There are NO multi-touch tests in this document.
